force-app/main/default/objects/Activity/fields/Assigned_To_Report_Filters__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Report_Filters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To (Report Filters)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>