force-app/main/default/objects/Activity/fields/Assigned_To_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Team__c</fullName>
    <formula>IF(!ISBLANK(Assigned_To_Report_Filters__c),Assigned_To_Report_Filters__r.UserRole.Name,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Team</label>
    <type>Text</type>
</CustomField>