force-app/main/default/objects/Activity/fields/Booked_By_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Name_CP__c</fullName>
    <label>Booked By Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>