force-app/main/default/objects/Activity/fields/Canceled_CP__c.field-meta.xml
<CustomField>
    <fullName>Canceled_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>