force-app/main/default/objects/Activity/fields/Creator_Manager__c.field-meta.xml
<CustomField>
    <fullName>Creator_Manager__c</fullName>
    <formula>CreatedBy.Manager.FirstName + &apos; &apos; + CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Manager</label>
    <type>Text</type>
</CustomField>