force-app/main/default/objects/Activity/fields/Designated_Assignee_CP__c.field-meta.xml
<CustomField>
    <fullName>Designated_Assignee_CP__c</fullName>
    <description>This field writes the value of the user within the queue who was &quot;Up Next&quot; within the Chili Piper Round Robin or the selected user who should have recieved a meeting via an Ownership based queue</description>
    <label>Designated Assignee CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>