force-app/main/default/objects/Activity/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Custom formula field for Activity Date</description>
    <formula>ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>