force-app/main/default/objects/Activity/fields/Gong__Canceled_Gong__c.field-meta.xml
<CustomField>
    <fullName>Gong__Canceled_Gong__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canceled (Gong)</label>
    <type>Checkbox</type>
</CustomField>