force-app/main/default/objects/Activity/fields/Gong__Current_Flow_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_Step_Number__c</fullName>
    <label>Current Flow Step Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>