force-app/main/default/objects/Activity/fields/Hubspot_Engagement_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Engagement_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Hubspot Engagement ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>