force-app/main/default/objects/Activity/fields/Meeting_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Call_Notes__c</fullName>
    <description>Used to populate call notes</description>
    <inlineHelpText>Populate any meeting/call notes</inlineHelpText>
    <label>Meeting/Call Notes</label>
    <type>TextArea</type>
</CustomField>