force-app/main/default/objects/Activity/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>