force-app/main/default/objects/Activity/fields/Partner_Escalation_Descope_Task__c.field-meta.xml
<CustomField>
    <fullName>Partner_Escalation_Descope_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Escalation Descope Task</label>
    <type>Checkbox</type>
</CustomField>