force-app/main/default/objects/Activity/fields/PexlifyScore__Recommended_Action_Definition__c.field-meta.xml
<CustomField>
    <fullName>PexlifyScore__Recommended_Action_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source Action Definition of the Activity.</description>
    <label>Recommended Action Definition</label>
    <referenceTo>PexlifyScore__Recommended_Action_Definition__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>