force-app/main/default/objects/Activity/fields/Queue_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name_CP__c</fullName>
    <label>Queue Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>