force-app/main/default/objects/Activity/fields/Rescheduled_CP__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_CP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rescheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>