force-app/main/default/objects/Activity/fields/Router_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Router_Name_CP__c</fullName>
    <description>This value writes the name of the Chili Piper Router used to book this meeting. The value will only be populated when a meeting is booked via a Router, but not when it&apos;s booked via a personal link, Instant Booker, or a Queue URL.</description>
    <label>Router Name CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>