force-app/main/default/objects/Activity/fields/Task_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Task_Disposition__c</fullName>
    <description>Used by the Sales Development team to indicate a reason for closing their tasks related to SDR Follow Ups.</description>
    <inlineHelpText>Explanation for closing out this task</inlineHelpText>
    <label>Task Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>