force-app/main/default/objects/Activity/fields/WorkspaceName_CP__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceName_CP__c</fullName>
    <description>Name of Chili Piper Workspace of the booking of the meeting</description>
    <label>WorkspaceName CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>